# AboutWeb-backend

./: .gitignore  Makefile  README.md  pyproject.toml
app/: settings.py
app/core/shared/: handler.py
app/core/shared/entities/: entity.py  value_objects.py
app/core/shared/usecase/: usecase.py
app/core/user/dto/: user.py
app/core/user/entities/: user.py  value_objects.py
app/core/user/usecase/: register.py
app/core/user/usecase/create/: handler.py
app/entities/base/: value_object.py  value_objects.py
app/entities/user/: user.py  value_objects.py
app/infrastructure/db/sqlalchemy/alembic/: env.py
app/infrastructure/db/sqlalchemy/alembic/versions/: 8bb202e5f595_.py  f3367853b886_.py
app/infrastructure/db/sqlalchemy/models/: __init__.py  mapping.py
app/infrastructure/db/sqlalchemy/models/shared/: image.py
app/infrastructure/db/sqlalchemy/models/user/: __init__.py  user.py
app/shared/: dto.py
app/tests/entities/base/: value_objects_test.py
app/tests/entities/user/: user_test.py  value_objects_test.py
deploy/: alembic.ini
tests/app/core/shared/entities/: value_objects_test.py
tests/app/core/user/: conftest.py
tests/app/core/user/entities/: user_test.py  value_objects_test.py
tests/app/core/user/entities/data/: users_test.json
tests/app/core/user/usecase/create/: handler_test.py
