[tool.poetry]
name = "aboutweb-backend"
version = "0.1.0"
description = ""
authors = ["mihey <daniil53891@yandex.com>"]
readme = "README.md"
packages = [{include = "aboutweb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^1.10.2"}
mypy = "^0.991"
flake8-pyproject = "^1.2.2"
flake8-print = "^5.0.0"
flake8 = "^6.0.0"
black = "^22.12.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = [
    "tests/*.py",
    "tests/**/*.py",
]
python_classes = [
    "Test*",
    "*Test",
]
